@@ -95,6 +95,8 @@
                 <version>3.5.2</version>
                 <configuration>
                     <forkCount>1</forkCount>
+                    <jvm>${java.home}/bin/java</jvm>
+                    <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
                 </configuration>
             </plugin>
         </plugins>
